cleanup layout on dashboard to match rest of website fix stretched images for small-landscape screen sizes with a max width sizing

--- a/app/assets/stylesheets/views/pages/portfolio.scss
+++ b/app/assets/stylesheets/views/pages/portfolio.scss
@@ -25,6 +25,7 @@
 
       .item-image {
         width: 100%;
+        max-width: 450px;
         height: 290px;
 
 
